[package]
name = "mistral"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.5"

# karena perangkattidak mendukung gpu maka matikan feature yang digunakan dan gunakan default lib saja
# candle-transformers = {features = ["cuda"], version = "0.4"}
# candle-core = {features = ["cuda"], version = "0.4"}
# candle-nn = {features = ["cuda"], version = "0.4"}
candle-transformers = "0.4.1"
candle-core = "0.4.1"
candle-nn = "0.4.1"
candle-examples = "0.4"

hf-hub="0.3"
tracing-subscriber="0.3"
tracing-chrome="0.7"
tokenizers="0.15"
