[package]
name = "phi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = "4.5"


serde_json="1.0"
csv="1.3"
hf-hub="0.3"
tracing-subscriber="0.3"
tracing-chrome="0.7"
tokenizers="0.15"
candle-core = "0.4.1"
candle-transformers = "0.4.1"
candle-nn = "0.4.1"
candle-examples = "0.4.1"
